# mystr

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
mystr/: CMakeLists.txt  mystr.cpp  mystr.h
test/: string_test.cpp
